Remove comments and do some minimal refactoring